--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=demo
 server.port=8081
-#MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
-spring.datasource.username=root
-spring.datasource.password=
 
-# Configuración del controlador JDBC
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-# Configuración de Hibernate (JPA)
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgre
+spring.datasource.username=postgre
+spring.datasource.password=postgre
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=demo_db
+
